--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ h3.header-text{
         background-size: cover;
     }
 .header-img{
-    max-width:58% !important;
+   /* max-width:58% !important; */
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -76,7 +76,7 @@ h3.header-text{
 }
 @media (max-width: 480px){
     .header-img{
-        max-width:20% !important;
+        max-width:40% !important;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
@@ -86,7 +86,7 @@ h3.header-text{
 }
 @media (min-width: 481px) and (max-width: 767px){
     .header-img{
-        max-width:35% !important;
+        max-width:55% !important;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
@@ -96,8 +96,8 @@ h3.header-text{
 }
 /*--top-nav--*/
 .logo{
-    width: 130px;
-    height: 110px
+    width: 100px;
+    height: 100px
         
 }
 .navbar-header h1 {
